feat: add swap-api integration and enhance routing system
Add comprehensive support for swap-api (swap200 contracts) and improve
the overall routing and configuration system across the application.

SDK Changes:
- Add SwapApiAdapter for swap200 contract integration with automatic
  wrap/unwrap support for ARC200 tokens
- Add PoolDataService to fetch and cache pool data from VOI API
- Enhance Router with swap-api poolId support and improved routing logic
- Update common tokens list for better two-hop routing
- Add getSwapApiQuote method for direct swap-api quotes

API Changes:
- Add POST /api/quote/swap-api endpoint for direct swap-api quotes
- Enhance GET /api/quote to accept optional swapApiPoolIds parameter
- Improve error handling and logging in quote routes

Web App Changes:
- Add SwapInterface component with full swap functionality
- Add WalletConnectModal component for wallet integration
- Implement config management system with centralized configuration files
- Migrate from next.config.js to next.config.mjs
- Add wallet integration using @txnlab/use-wallet-react
- Update page.tsx to use new components and config system

Configuration:
- Add centralized config directory with api.json, app.json, pools.json,
  and tokens.json
- Add config loader utilities in apps/web/lib/config.ts
- Add .npmrc for package configuration

Documentation:
- Update README.md with swap-api integration details
- Document new API endpoints and parameters
- Add information about ARC200 token support

Dependencies:
- Update package.json files across monorepo
- Add new dependencies for wallet integration and config management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2022"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "skipLibCheck": true,
+    "strict": false,
+
+    /* Bundler mode */
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "baseUrl": ".",
-    "paths": {
-      "@ally/sdk": ["./packages/sdk/src"],
-      "@ally/sdk/*": ["./packages/sdk/src/*"]
-    }
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "app"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
