--- a/package.json
+++ b/package.json
@@ -3,31 +3,46 @@
   "version": "1.0.0",
   "description": "Ally - Simple & intuitive DEX aggregator for Voi",
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"pnpm --filter api dev\" \"pnpm --filter web dev\"",
-    "build": "pnpm --filter sdk build && pnpm --filter api build && pnpm --filter web build",
-    "test": "pnpm --filter sdk test",
-    "lint": "eslint . --ext .ts,.tsx",
+    "dev": "vite --port 3999",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit"
   },
+  "dependencies": {
+    "@algorandfoundation/algokit-utils": "^9.1.2",
+    "@txnlab/use-wallet": "^4.3.1",
+    "@txnlab/use-wallet-react": "^4.3.1",
+    "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/sign-client": "^2.23.0",
+    "algosdk": "^3.5.2",
+    "autoprefixer": "^10.4.0",
+    "lute-connect": "^1.6.3",
+    "postcss": "^8.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0"
+  },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
-    "concurrently": "^8.2.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.54.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.3.0",
+    "vite": "^5.4.19",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.0",
-    "typescript": "^5.3.0"
+    "prettier": "^3.1.0"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
+    "node": ">=18.0.0"
   }
 }
