refactor: improve swap UI and fix token selection logic
- Update UI labels from "From/To" to "You pay/You receive" for clarity
- Redesign token selectors to be inline with amount inputs
- Add read-only output field displaying quote amount
- Prevent selecting same token for both from and to positions
- Auto-select alternative token when from/to tokens match
- Fix pool filtering logic to properly handle wrapped tokens (ARC200)
- Update DEX branding: rename PactFi references to Nomadex
- Remove unused wrapped token entries (wVOI, wUSDC) from token config
- Update PROMPT.md to reflect actual Vite + React implementation
- Remove obsolete AMPLIFY_REDIRECTS.md documentation

The swap interface now provides a clearer UX with better visual
hierarchy and prevents common user errors like selecting the same
token for both sides of a swap.

--- a/config/app.json
+++ b/config/app.json
@@ -25,7 +25,7 @@
     },
     "nomadex": {
       "name": "Nomadex",
-      "displayName": "PACT",
+      "displayName": "NOMADEX",
       "feePct": 0.25,
       "enabled": true
     },
