--- a/public/config/app.json
+++ b/public/config/app.json
@@ -25,7 +25,7 @@
     },
     "nomadex": {
       "name": "Nomadex",
-      "displayName": "PACT",
+      "displayName": "NOMADEX",
       "feePct": 0.25,
       "enabled": true
     },
