--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^9.1.2",
+    "@blockshake/defly-connect": "^1.2.1",
     "@txnlab/use-wallet": "^4.3.1",
     "@txnlab/use-wallet-react": "^4.3.1",
     "@walletconnect/modal": "^2.7.0",
