--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@algorandfoundation/algokit-utils": "^9.1.2",
     "@txnlab/use-wallet": "^4.3.1",
     "@txnlab/use-wallet-react": "^4.3.1",
+    "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/sign-client": "^2.21.8",
     "algosdk": "^3.5.2",
     "autoprefixer": "^10.4.0",
     "lute-connect": "^1.6.3",
