--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3999",
+    "prebuild": "node scripts/update-version.cjs",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "setup-version": "bash scripts/setup-version-management.sh"
   },
   "dependencies": {
     "@algorandfoundation/algokit-utils": "^9.1.2",
